{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 535,
  "lineage": "00c23518-bbc4-94cb-c3df-e3daae248221",
  "resources": [
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:internet-gateway/igw-0b0068252e9f5c324",
            "id": "igw-0b0068252e9f5c324",
            "owner_id": "364570460639",
            "tags": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "secgrp1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:security-group/sg-08a144355e002b273",
            "description": "Security group by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a144355e002b273",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "secgrp1",
            "name_prefix": "",
            "owner_id": "364570460639",
            "revoke_rules_on_delete": false,
            "tags": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fgt_internal_us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-0c78b8e1787986cba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c78b8e1787986cba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_internal_us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-05d963663cbb42269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d963663cbb42269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-0db09d0d8a607fa20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db09d0d8a607fa20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-0bae39c7cc32d59eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bae39c7cc32d59eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc/vpc-02803fa062aeafb7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baec49a0d8b22c83",
            "default_route_table_id": "rtb-020cc8ba3f3d5c892",
            "default_security_group_id": "sg-07853b5bbb0d4f0f9",
            "dhcp_options_id": "dopt-b2ad55d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02803fa062aeafb7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020cc8ba3f3d5c892",
            "owner_id": "364570460639",
            "tags": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            },
            "tags_all": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "data",
      "type": "aws_network_interface",
      "name": "gwlb_intfs",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:network-interface/eni-094b89f3fd5976a6d",
            "attachment": [
              {
                "attachment_id": "ela-attach-0be644914e430b640",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-2a",
            "description": "ELB gwy/gwlb-fgt/cf4de401c325295e",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-0c78b8e1787986cba"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-02803fa062aeafb7c"
                ]
              }
            ],
            "id": "eni-094b89f3fd5976a6d",
            "interface_type": "gateway_load_balancer",
            "mac_address": "02:02:2a:72:58:d1",
            "owner_id": "364570460639",
            "private_ip": "10.0.1.194",
            "private_ips": [
              "10.0.1.194"
            ],
            "requester_id": "489998700648",
            "subnet_id": "subnet-0c78b8e1787986cba",
            "vpc_id": "vpc-02803fa062aeafb7c"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:network-interface/eni-0ad787ee780a5f24d",
            "attachment": [
              {
                "attachment_id": "ela-attach-0db3865b68d4126a6",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-2b",
            "description": "ELB gwy/gwlb-fgt/cf4de401c325295e",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-05d963663cbb42269"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-02803fa062aeafb7c"
                ]
              }
            ],
            "id": "eni-0ad787ee780a5f24d",
            "interface_type": "gateway_load_balancer",
            "mac_address": "06:85:ac:2b:ba:4f",
            "owner_id": "364570460639",
            "private_ip": "10.0.3.7",
            "private_ips": [
              "10.0.3.7"
            ],
            "requester_id": "066548406366",
            "subnet_id": "subnet-05d963663cbb42269",
            "vpc_id": "vpc-02803fa062aeafb7c"
          }
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/cf4de401c325295e",
            "arn_suffix": "gwy/gwlb-fgt/cf4de401c325295e",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/cf4de401c325295e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-fgt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d963663cbb42269"
              },
              {
                "subnet_id": "subnet-0c78b8e1787986cba"
              }
            ],
            "subnets": [
              "subnet-05d963663cbb42269",
              "subnet-0c78b8e1787986cba"
            ],
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gwlb_ln",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:listener/gwy/gwlb-fgt/cf4de401c325295e/dcc1211987102ce3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00dfc7d45fd1b38b97",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:listener/gwy/gwlb-fgt/cf4de401c325295e/dcc1211987102ce3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/cf4de401c325295e",
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gwlb-ln"
            },
            "tags_all": {
              "Name": "gwlb-ln"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb_target_group.gwlb_tgp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_tgp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00dfc7d45fd1b38b97",
            "arn_suffix": "targetgroup/gwlb-tgp-fgt/00dfc7d45fd1b38b97",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00dfc7d45fd1b38b97",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-tgp-fgt",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlb_endps",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "gwlbe-subnet-01aeede137ec1ae68",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc-endpoint/vpce-013325df231323c09",
            "id": "vpce-013325df231323c09",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-097884c6a49f3fce6"
            ],
            "owner_id": "364570460639",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-2.vpce-svc-07631330c351ecc58",
            "state": "available",
            "subnet_ids": [
              "subnet-01aeede137ec1ae68"
            ],
            "tags": {
              "Name": "gwlbe-subnet-01aeede137ec1ae68"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-01aeede137ec1ae68"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe-subnet-022ce31f94f026553",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc-endpoint/vpce-0fde034b24de34ae1",
            "id": "vpce-0fde034b24de34ae1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-008a2d5eed70e121a"
            ],
            "owner_id": "364570460639",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-2.vpce-svc-07631330c351ecc58",
            "state": "available",
            "subnet_ids": [
              "subnet-022ce31f94f026553"
            ],
            "tags": {
              "Name": "gwlbe-subnet-022ce31f94f026553"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-022ce31f94f026553"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "local_pc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0068252e9f5c324",
            "id": "r-rtb-09e1a46e39078fe101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e1a46e39078fe10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-09e1a46e39078fe10",
            "id": "rtb-09e1a46e39078fe10",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgt_login"
            },
            "tags_all": {
              "Name": "fgt_login"
            },
            "timeouts": null,
            "vpc_id": "vpc-02803fa062aeafb7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a5fab80201c7c45",
            "route_table_id": "rtb-09e1a46e39078fe10",
            "subnet_id": "subnet-0db09d0d8a607fa20"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030ade3ce640e203",
            "route_table_id": "rtb-09e1a46e39078fe10",
            "subnet_id": "subnet-0bae39c7cc32d59eb"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00065681916a46587",
            "id": "r-rtb-085f930c9b2b77b981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085f930c9b2b77b98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-085f930c9b2b77b98",
            "id": "rtb-085f930c9b2b77b98",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_outbound"
            },
            "tags_all": {
              "Name": "gwlbe_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f9ce812e01172f5",
            "route_table_id": "rtb-085f930c9b2b77b98",
            "subnet_id": "subnet-022ce31f94f026553"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbfd0a4b8a642987",
            "route_table_id": "rtb-085f930c9b2b77b98",
            "subnet_id": "subnet-01aeede137ec1ae68"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.100.3.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0204b3c8e7cce8b461442211147",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0204b3c8e7cce8b46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fde034b24de34ae1",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.100.4.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0204b3c8e7cce8b461223906803",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0204b3c8e7cce8b46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-013325df231323c09",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-0204b3c8e7cce8b46",
            "id": "rtb-0204b3c8e7cce8b46",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "igw_inbound"
            },
            "tags_all": {
              "Name": "igw_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_gateways",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-00065681916a46587",
            "id": "rtbassoc-055fd7cf6e48655ba",
            "route_table_id": "rtb-0204b3c8e7cce8b46"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ebd2e57b47d37dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ebd2e57b47d37dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fde034b24de34ae1",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az2\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e12034edb5cb0df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e12034edb5cb0df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-013325df231323c09",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    }
  ]
}